# batchpatch

./: .gitignore  Cargo.toml  README.md
src/: clone.rs  data.rs  gitconfig.rs  github.rs  gitutils.rs  list.rs  main.rs  patcher.rs  push.rs  remote_callbacks.rs
