[package]
name = "batchpatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colog = "1.3.0"
git2 = "0.19.0"
log = "0.4.22"
octorust = { version = "0.7.0", features = ["openssl", "httpcache"] }
regex = "1.11.0"
serde = "1.0.211"
serde_json = "1.0.132"
tempfile = "3.13.0"
